tests/specs/interface_construct.txt
# mod.ts
export interface I {
  new(name: string);
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface I {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   new(name: string);
  |   ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:2:3
  | 
2 |   new(name: string);
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

interface I

  constructor(name: string)


# output.json
[
  {
    "name": "I",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "interface",
    "interfaceDef": {
      "extends": [],
      "constructors": [
        {
          "params": [
            {
              "kind": "identifier",
              "name": "name",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              }
            }
          ],
          "returnType": null,
          "typeParams": [],
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 23
          }
        }
      ],
      "methods": [],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
